- Adjust overpanel styling on mobile - Fix loading card animation for mobile

--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -160,6 +160,7 @@
       background-color: $gray-100;
       border-radius: 3px;
       height: 1.25rem;
+      overflow: hidden;
 
       &::after {
         display: block;
